--- a/other.yaml
+++ b/other.yaml
@@ -5,3 +5,7 @@ payload:
   - DOMAIN-SUFFIX,openai.com
   - DOMAIN-SUFFIX,chat.com
   - DOMAIN-SUFFIX,ntc.party
+  - DOMAIN-SUFFIX,instagram.com
+  - DOMAIN-SUFFIX,cdninstagram.com
+  - DOMAIN-SUFFIX,facebook.com
+  
