--- a/other.yaml
+++ b/other.yaml
@@ -10,3 +10,5 @@ payload:
   - DOMAIN-SUFFIX,facebook.com
   - DOMAIN-SUFFIX,tiktokv.com
   - DOMAIN-SUFFIX,tiktok.com
+  - DOMAIN-SUFFIX,mcs-sg.tiktokv.com
+  - DOMAIN-SUFFIX,tiktokcdn.com
